--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!-- License below -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>KoSIT XML Prüftool Implementierung</name>
+    <name>KoSIT XML Validor</name>
 
     <groupId>de.kosit</groupId>
     <version>1.3.1-SNAPSHOT</version>
 
     <artifactId>validationtool</artifactId>
     <description>KoSIT XML Validator against XSD and Schematron based on defined scenarios.</description>
+    <organization>
+        <name>Coordination Office for IT Standards (KoSIT)</name>
+        <url>https://www.xoev.de</url>
+    </organization>
     <developers>
         <!-- In alphabetical order by last name -->
         <developer>
@@ -43,6 +47,7 @@
         <version.lombok>1.18.8</version.lombok>
         <version.saxon-he>9.9.1-3</version.saxon-he>
         <version.slf4j>1.7.25</version.slf4j>
+        <validator.main.class>de.kosit.validationtool.cmd.CommandLineApplication</validator.main.class>
     </properties>
     <repositories>
         <repository>
@@ -201,11 +206,29 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <index>true</index>
+                        <manifest>
+                            <addClasspath>false</addClasspath>
+                            <addDefaultEntries>true</addDefaultEntries>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                            <addBuildEnvironmentEntries>true</addBuildEnvironmentEntries>
+                            <mainClass>${validator.main.class}</mainClass>
+                        </manifest>
 
+                    </archive>
+                </configuration>
+
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>3.2.4</version>
                 <executions>
                     <execution>
                         <id>jdk11+</id>
@@ -218,7 +241,7 @@
                             <shadedClassifierName>standalone</shadedClassifierName>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>de.kosit.validationtool.cmd.CommandLineApplication</mainClass>
+                                    <mainClass>${validator.main.class}</mainClass>
                                 </transformer>
                             </transformers>
                             <filters>
@@ -256,8 +279,13 @@
                             </artifactSet>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>de.kosit.validationtool.cmd.CommandLineApplication</mainClass>
+                                    <manifestEntries>
+                                        <Main-Class>${validator.main.class}</Main-Class>
+                                        <X-Compile-Source-JDK>${maven.compile.source}</X-Compile-Source-JDK>
+                                        <X-Compile-Target-JDK>${maven.compile.target}</X-Compile-Target-JDK>
+                                    </manifestEntries>
                                 </transformer>
+
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
                                     <!-- Signatur von saxon entfernen - sonst läuft die standalone-anwendung nicht -->
                                     <resource>META-INF/TE-050AC.SF</resource>
